Add allloops_dict for more restriction refactoring
Plot all correlations together

--- a/code/03_scenario_analysis.ipynb
+++ b/code/03_scenario_analysis.ipynb
@@ -27,17 +27,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5126c030",
-   "metadata": {},
-   "source": [
-    "## To do\n",
-    "- [X] Refactor with functions for restrictions (also 05)\n",
-    "- [X] POI analysis\n",
-    "- [X] Fix all same max ylim values at ~8000"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "816924f7-7ddc-44a1-bcd7-fbf203a41b1d",
    "metadata": {},
    "source": [
@@ -59,11 +48,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7a10702c-5ca1-4a66-9414-289199015f18",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:  # See if allloops_dict exists. If not, initialize. This allows running multiple scenarios.\n",
+    "    allloops_dict\n",
+    "except NameError:\n",
+    "    allloops_dict = {}\n",
+    "allloops_dict[SCENARIOID] = {}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "9b986890-413c-43c3-a6fa-57ff87899f25",
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"Running scenario in \" + STUDY_AREA)\n",
+    "print(\"Running scenario \" + str(SCENARIOID) + \" in \" + STUDY_AREA)\n",
     "for k, v in SCENARIO[SCENARIOID].items():\n",
     "    print(k + \": \" + str(v))"
    ]
@@ -213,7 +216,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "allloops_bound = restrict_scenario(allloops, allloops, level=0)"
+    "allloops_dict[SCENARIOID][0] = restrict_scenario(allloops, allloops, level=0)"
    ]
   },
   {
@@ -224,7 +227,7 @@
    "outputs": [],
    "source": [
     "# Plot all bounded loops\n",
-    "vertex_sizes, vertex_colors = get_vertex_plotinfo(allloops_bound)\n",
+    "vertex_sizes, vertex_colors = get_vertex_plotinfo(allloops_dict[SCENARIOID][0])\n",
     "fig, ax = plot_dk_gdf(\n",
     "    nodes,\n",
     "    edges,\n",
@@ -235,7 +238,7 @@
     "    link_color=PLOTPARAM[\"color\"][\"neutral\"],\n",
     ")\n",
     "plot_dk_scenariotext(ax, filterdepth=1)\n",
-    "plot_dk_inset(fig, allloops_bound, 8, 7800)\n",
+    "plot_dk_inset(fig, allloops_dict[SCENARIOID][0], 8, 7800)\n",
     "\n",
     "fig.savefig(\n",
     "    PATH[\"plot\"]\n",
@@ -263,7 +266,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "allloops_bound_sloped = restrict_scenario(allloops, allloops_bound, level=1)"
+    "allloops_dict[SCENARIOID][1] = restrict_scenario(\n",
+    "    allloops, allloops_dict[SCENARIOID][0], level=1\n",
+    ")"
    ]
   },
   {
@@ -292,7 +297,7 @@
     "    link_color=link_colors,\n",
     ")\n",
     "plot_dk_scenariotext(ax, filterdepth=2)\n",
-    "plot_dk_inset(fig, allloops_bound_sloped, 8, 7800)\n",
+    "plot_dk_inset(fig, allloops_dict[SCENARIOID][1], 8, 7800)\n",
     "\n",
     "fig.savefig(\n",
     "    PATH[\"plot\"]\n",
@@ -322,8 +327,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "allloops_bound_sloped_watered = restrict_scenario(\n",
-    "    allloops, allloops_bound_sloped, level=2\n",
+    "allloops_dict[SCENARIOID][2] = restrict_scenario(\n",
+    "    allloops, allloops_dict[SCENARIOID][1], level=2\n",
     ")"
    ]
   },
@@ -335,7 +340,7 @@
    "outputs": [],
    "source": [
     "# Plot all bounded sloped loops\n",
-    "vertex_sizes, vertex_colors = get_vertex_plotinfo(allloops_bound_sloped_watered)\n",
+    "vertex_sizes, vertex_colors = get_vertex_plotinfo(allloops_dict[SCENARIOID][2])\n",
     "link_widths, link_colors = get_link_plotinfo(\n",
     "    edges,\n",
     "    var_bad=\"max_slope\",\n",
@@ -353,7 +358,7 @@
     "    link_color=link_colors,\n",
     ")\n",
     "plot_dk_scenariotext(ax, filterdepth=3)\n",
-    "plot_dk_inset(fig, allloops_bound_sloped_watered, 8, 7800)\n",
+    "plot_dk_inset(fig, allloops_dict[SCENARIOID][2], 8, 7800)\n",
     "\n",
     "\n",
     "fig.savefig(\n",
@@ -386,8 +391,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "allloops_bound_sloped_watered_diverse = restrict_scenario(\n",
-    "    allloops, allloops_bound_sloped_watered, level=3\n",
+    "allloops_dict[SCENARIOID][3] = restrict_scenario(\n",
+    "    allloops, allloops_dict[SCENARIOID][2], level=3\n",
     ")"
    ]
   },
@@ -399,7 +404,7 @@
    "outputs": [],
    "source": [
     "# Plot all bounded sloped loops\n",
-    "vertex_sizes, vertex_colors = get_vertex_plotinfo(allloops_bound_sloped_watered_diverse)\n",
+    "vertex_sizes, vertex_colors = get_vertex_plotinfo(allloops_dict[SCENARIOID][3])\n",
     "link_widths, link_colors = get_link_plotinfo(\n",
     "    edges,\n",
     "    var_bad=\"max_slope\",\n",
@@ -417,7 +422,7 @@
     "    link_color=link_colors,\n",
     ")\n",
     "plot_dk_scenariotext(ax, filterdepth=4)\n",
-    "plot_dk_inset(fig, allloops_bound_sloped_watered_diverse, 8, 7800)\n",
+    "plot_dk_inset(fig, allloops_dict[SCENARIOID][3], 8, 7800)\n",
     "\n",
     "fig.savefig(\n",
     "    PATH[\"plot\"]\n",
