--- a/code/05_hexgrid_correlations.ipynb
+++ b/code/05_hexgrid_correlations.ipynb
@@ -35,7 +35,8 @@
    "id": "74a91d1c-1102-49bb-a970-699eeb062b58",
    "metadata": {},
    "source": [
-    "- [ ] Is node density a proxy for loop census size?\n",
+    "- [X] Is node density a proxy for loop census size?\n",
+    "- [ ] LISA of H3 POI diversity\n",
     "- [ ] Distribution/spatial clustering of slopes, pois in DK? How does it affect loops? Compare with random redistribution. Easy to add few POIS to dramatically increase coverage? \"identify/fix POI deserts\""
    ]
   },
@@ -62,11 +63,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "96ab0c20-4b70-4f78-acc8-df437f100b8e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:  # See if allloops_dict exists. If not, initialize. This allows running multiple scenarios.\n",
+    "    allloops_dict\n",
+    "except NameError:\n",
+    "    allloops_dict = {}\n",
+    "    dfunified_scenarios = {}\n",
+    "allloops_dict[SCENARIOID] = {}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "9b986890-413c-43c3-a6fa-57ff87899f25",
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"Running scenario in \" + STUDY_AREA)\n",
+    "print(\"Running scenario \" + str(SCENARIOID) + \" in \" + STUDY_AREA)\n",
     "for k, v in SCENARIO[SCENARIOID].items():\n",
     "    print(k + \": \" + str(v))"
    ]
@@ -397,7 +413,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "allloops_bound = restrict_scenario(allloops, allloops, level=0)"
+    "allloops_dict[SCENARIOID][0] = restrict_scenario(allloops, allloops, level=0)"
    ]
   },
   {
@@ -411,7 +427,9 @@
     "    columns=[\"name\", \"id_cykelknudepkt\", \"_igraph_index\", \"x\", \"y\", \"nodeID\"]\n",
     ")  # drop all data\n",
     "nodes_loopnum1.to_crs(epsg=4326, inplace=True)  # reproject for H3\n",
-    "nodes_loopnum1[\"loopnum1\"] = get_vertex_loopnums(allloops_bound, \"log2\").tolist()\n",
+    "nodes_loopnum1[\"loopnum1\"] = get_vertex_loopnums(\n",
+    "    allloops_dict[SCENARIOID][0], \"log2\"\n",
+    ").tolist()\n",
     "if debug:\n",
     "    print(nodes_loopnum1.head())"
    ]
@@ -455,7 +473,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "allloops_bound_sloped = restrict_scenario(allloops, allloops_bound, level=1)"
+    "allloops_dict[SCENARIOID][1] = restrict_scenario(\n",
+    "    allloops, allloops_dict[SCENARIOID][0], level=1\n",
+    ")"
    ]
   },
   {
@@ -469,7 +489,9 @@
     "    columns=[\"name\", \"id_cykelknudepkt\", \"_igraph_index\", \"x\", \"y\", \"nodeID\"]\n",
     ")  # drop all data\n",
     "nodes_loopnum2.to_crs(epsg=4326, inplace=True)  # reproject for H3\n",
-    "nodes_loopnum2[\"loopnum2\"] = get_vertex_loopnums(allloops_bound_sloped, \"log2\").tolist()\n",
+    "nodes_loopnum2[\"loopnum2\"] = get_vertex_loopnums(\n",
+    "    allloops_dict[SCENARIOID][1], \"log2\"\n",
+    ").tolist()\n",
     "if debug:\n",
     "    print(nodes_loopnum2.head())\n",
     "\n",
@@ -494,8 +516,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "allloops_bound_sloped_watered = restrict_scenario(\n",
-    "    allloops, allloops_bound_sloped, level=2\n",
+    "allloops_dict[SCENARIOID][2] = restrict_scenario(\n",
+    "    allloops, allloops_dict[SCENARIOID][1], level=2\n",
     ")"
    ]
   },
@@ -511,7 +533,7 @@
     ")  # drop all data\n",
     "nodes_loopnum3.to_crs(epsg=4326, inplace=True)  # reproject for H3\n",
     "nodes_loopnum3[\"loopnum3\"] = get_vertex_loopnums(\n",
-    "    allloops_bound_sloped_watered, \"log2\"\n",
+    "    allloops_dict[SCENARIOID][2], \"log2\"\n",
     ").tolist()\n",
     "if debug:\n",
     "    print(nodes_loopnum3.head())\n",
@@ -537,8 +559,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "allloops_bound_sloped_watered_diverse = restrict_scenario(\n",
-    "    allloops, allloops_bound_sloped_watered, level=3\n",
+    "allloops_dict[SCENARIOID][3] = restrict_scenario(\n",
+    "    allloops, allloops_dict[SCENARIOID][2], level=3\n",
     ")"
    ]
   },
@@ -554,7 +576,7 @@
     ")  # drop all data\n",
     "nodes_loopnum4.to_crs(epsg=4326, inplace=True)  # reproject for H3\n",
     "nodes_loopnum4[\"loopnum4\"] = get_vertex_loopnums(\n",
-    "    allloops_bound_sloped_watered_diverse, \"log2\"\n",
+    "    allloops_dict[SCENARIOID][3], \"log2\"\n",
     ").tolist()\n",
     "if debug:\n",
     "    print(nodes_loopnum4.head())\n",
@@ -588,7 +610,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dfunified_scenarios = (\n",
+    "dfunified_scenarios[SCENARIOID] = (\n",
     "    nodesh3.join(nodes_loopnum1h3.drop(columns=\"geometry\"))\n",
     "    .join(nodes_loopnum2h3.drop(columns=\"geometry\"))\n",
     "    .join(nodes_loopnum3h3.drop(columns=\"geometry\"))\n",
@@ -604,7 +626,9 @@
     "    )\n",
     ")\n",
     "\n",
-    "pd.plotting.scatter_matrix(dfunified_scenarios, alpha=0.05, figsize=(10, 10));"
+    "pd.plotting.scatter_matrix(\n",
+    "    dfunified_scenarios[SCENARIOID], alpha=0.05, figsize=(10, 10)\n",
+    ");"
    ]
   },
   {
@@ -617,10 +641,10 @@
     "fig, axes = plt.subplots(nrows=1, ncols=4, figsize=(14, 3))\n",
     "\n",
     "xs = [\n",
-    "    nodes_loopnum1h3[\"loopnum1\"],\n",
-    "    nodes_loopnum2h3[\"loopnum2\"],\n",
-    "    nodes_loopnum3h3[\"loopnum3\"],\n",
-    "    nodes_loopnum4h3[\"loopnum4\"],\n",
+    "    dfunified_scenarios[SCENARIOID][\"Loop bits (length)\"],\n",
+    "    dfunified_scenarios[SCENARIOID][\"Loop bits (gradient)\"],\n",
+    "    dfunified_scenarios[SCENARIOID][\"Loop bits (water)\"],\n",
+    "    dfunified_scenarios[SCENARIOID][\"Loop bits (POI)\"],\n",
     "]\n",
     "xlabels = [\"length\", \"gradient\", \"water\", \"POI diversity\"]\n",
     "\n",
@@ -785,6 +809,105 @@
     "        axes[i].set_yticklabels([])\n",
     "    axes[i].set_xlabel(xlabels[i])\n",
     "    axes[i].set_ylim([0, 23])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a6e9da90-ee29-493f-a723-007f4848473f",
+   "metadata": {},
+   "source": [
+    "### Plot all correlations together"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d986894-2387-427c-a21d-4047525eb964",
+   "metadata": {},
+   "source": [
+    "Run this notebook on both scenarios to fully populate `dfunified_scenarios`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "627ac9a8-46c9-41a1-970e-1eec233e07f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    dfunified_scenarios[1]\n",
+    "\n",
+    "    fig, axrows = plt.subplots(nrows=3, ncols=4, figsize=(14, 9))\n",
+    "\n",
+    "    rownum = 0\n",
+    "    axes = axrows[rownum]\n",
+    "    y = nodesh3[\"count\"].to_list()\n",
+    "    xlabels = [\"Length\", \"Maximum gradient\", \"Has water\", \"POI diversity\"]\n",
+    "\n",
+    "    nonnanmask = ~np.isnan(dfunified_properties_weighted[xlabels[3]].to_list())\n",
+    "\n",
+    "    for i in range(len(xlabels)):\n",
+    "        axes[i].scatter(\n",
+    "            dfunified_properties_weighted[xlabels[i]].to_list(), y, color=\"k\", alpha=0.1\n",
+    "        )\n",
+    "\n",
+    "        if i != 0:\n",
+    "            res = scipy.stats.linregress(\n",
+    "                np.array(dfunified_properties_weighted[xlabels[i]])[nonnanmask],\n",
+    "                np.array(y)[nonnanmask],\n",
+    "            )\n",
+    "            axes[i].plot(\n",
+    "                dfunified_properties_weighted[xlabels[i]],\n",
+    "                res.slope * dfunified_properties_weighted[xlabels[i]] + res.intercept,\n",
+    "                linewidth=2.5,\n",
+    "                color=\"b\",\n",
+    "            )\n",
+    "\n",
+    "        if i == 0:\n",
+    "            axes[i].set_ylabel(\"Node density\")\n",
+    "        else:\n",
+    "            axes[i].set_yticklabels([])\n",
+    "        axes[i].set_xlabel(xlabels[i])\n",
+    "        axes[i].set_ylim([0, 23])\n",
+    "\n",
+    "    for rownum in [1, 2]:\n",
+    "        axes = axrows[rownum]\n",
+    "        sid = rownum - 1\n",
+    "\n",
+    "        xs = [\n",
+    "            dfunified_scenarios[sid][\"Loop bits (length)\"],\n",
+    "            dfunified_scenarios[sid][\"Loop bits (gradient)\"],\n",
+    "            dfunified_scenarios[sid][\"Loop bits (water)\"],\n",
+    "            dfunified_scenarios[sid][\"Loop bits (POI)\"],\n",
+    "        ]\n",
+    "        xlabels = [\"length\", \"gradient\", \"water\", \"POI diversity\"]\n",
+    "\n",
+    "        for i in range(len(xs)):\n",
+    "            axes[i].scatter(xs[i], nodesh3[\"count\"], color=\"k\", alpha=0.1)\n",
+    "\n",
+    "            res = scipy.stats.linregress(xs[i], nodesh3[\"count\"])\n",
+    "            axes[i].plot(\n",
+    "                xs[i],\n",
+    "                res.slope * xs[i] + res.intercept,\n",
+    "                linewidth=2.5,\n",
+    "                color=\"b\",\n",
+    "            )\n",
+    "\n",
+    "            if rownum == 2:\n",
+    "                axes[i].set_xlabel(\n",
+    "                    \"Loop bits+1 (\" + xlabels[i] + \" restriction)\"\n",
+    "                )  # +1 because of +1 in get_vertex_loopnums\n",
+    "            if i == 0:\n",
+    "                axes[i].set_ylabel(SCENARIO[sid][\"name\"] + \"\\n\\n Node density\")\n",
+    "            else:\n",
+    "                axes[i].set_yticklabels([])\n",
+    "\n",
+    "            # confband(xs[i], nodesh3[\"count\"], axes[i]) # The confband doesn't add much value\n",
+    "            axes[i].set_ylim([0, 23])\n",
+    "            axes[i].set_xlim([-1, 18])\n",
+    "\n",
+    "except KeyError:\n",
+    "    print(\"Plesase re-run this notebook with scenarioid: 1\")"
    ]
   }
  ],
