--- a/code/05_hexgrid_correlations.ipynb
+++ b/code/05_hexgrid_correlations.ipynb
@@ -14,7 +14,7 @@
    "id": "2bc9b960",
    "metadata": {},
    "source": [
-    "This notebook puts data into an H3 grid and performs correlations.\n",
+    "This notebook puts data into an H3 grid and performs local spatial autocorrelation and pairwise correlations.\n",
     "\n",
     "Contact: Michael Szell (michael.szell@gmail.com)\n",
     "\n",
@@ -36,8 +36,9 @@
    "metadata": {},
    "source": [
     "- [X] Is node density a proxy for loop census size?\n",
-    "- [ ] LISA of H3 POI diversity\n",
-    "- [ ] Distribution/spatial clustering of slopes, pois in DK? How does it affect loops? Compare with random redistribution. Easy to add few POIS to dramatically increase coverage? \"identify/fix POI deserts\""
+    "- [X] LISA. Identify node density and water deserts.\n",
+    "- [ ] Add scenario Family with e-bikes = Adult but without gradient restriction\n",
+    "- [ ] Add systematically water to water deserts and measure loop increase (for family e-bike scenario only?). Identify \"low hanging fruits\", \"biggest bang for the buck\"."
    ]
   },
   {
@@ -363,7 +364,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e93bb5d2-f138-4d50-a568-cd2c96ffb276",
+   "id": "31024bf3-e049-466e-9083-de1360ca29ed",
    "metadata": {},
    "source": [
     "Unweighted means:"
@@ -372,10 +373,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fdb94075-16da-4e4b-9f95-7631b368d2eb",
-   "metadata": {
-    "scrolled": true
-   },
+   "id": "4142647e-6003-4626-b7d6-f92b22000d9f",
+   "metadata": {},
    "outputs": [],
    "source": [
     "edges_lengthh3 = edges_length.h3.geo_to_h3_aggregate(6, \"mean\")\n",
@@ -392,10 +391,122 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6e6c008c-601c-4b9e-8ea1-7dae70ea403a",
+   "metadata": {},
+   "source": [
+    "## LISA"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6b9bc2ee-050e-4c39-9340-2339032dc80c",
+   "metadata": {},
+   "source": [
+    "### Node density"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "98406b80-bb28-43f9-b78a-e13dc6026941",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nodesh3.to_crs(epsg=25832, inplace=True)\n",
+    "w = weights.contiguity.Queen.from_dataframe(nodesh3, use_index=False)\n",
+    "if debug:\n",
+    "    plot_spatial_weights(w, nodesh3)\n",
+    "lisa = esda.Moran_Local(nodesh3[\"count\"], w)\n",
+    "if debug:\n",
+    "    plot_local_autocorrelation(lisa, nodesh3, \"count\")\n",
+    "lisa_cluster(lisa, nodesh3, p=0.05)\n",
+    "nodesh3.to_crs(epsg=4326, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4e875836-4f32-4deb-a0db-254ba1053c70",
+   "metadata": {},
+   "source": [
+    "### Maximum gradient"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c787a81-4d8b-43ed-ac70-d0af963b91af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "edges_max_slope_wmh3.to_crs(epsg=25832, inplace=True)\n",
+    "w = weights.contiguity.Queen.from_dataframe(edges_max_slope_wmh3, use_index=False)\n",
+    "if debug:\n",
+    "    plot_spatial_weights(w, edges_max_slope_wmh3)\n",
+    "lisa = esda.Moran_Local(edges_max_slope_wmh3[\"max_slope\"], w)\n",
+    "if debug:\n",
+    "    plot_local_autocorrelation(lisa, edges_max_slope_wmh3, \"max_slope\")\n",
+    "lisa_cluster(lisa, edges_max_slope_wmh3, p=0.05)\n",
+    "edges_max_slope_wmh3.to_crs(epsg=4326, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "415e313f-9d36-402b-bad8-87e76ea3b4d4",
+   "metadata": {},
+   "source": [
+    "### Water"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "843c22c3-7e05-4169-9dea-cb65b19f7520",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "edges_has_water_wmh3.to_crs(epsg=25832, inplace=True)\n",
+    "w = weights.contiguity.Queen.from_dataframe(edges_has_water_wmh3, use_index=False)\n",
+    "if debug:\n",
+    "    plot_spatial_weights(w, edges_has_water_wmh3)\n",
+    "lisa = esda.Moran_Local(edges_has_water_wmh3[\"has_water\"], w)\n",
+    "if debug:\n",
+    "    plot_local_autocorrelation(lisa, edges_has_water_wmh3, \"has_water\")\n",
+    "lisa_cluster(lisa, edges_has_water_wmh3, p=0.05)\n",
+    "edges_has_water_wmh3.to_crs(epsg=4326, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6c02936f-6303-45f3-bc94-db79665fe8d6",
+   "metadata": {},
+   "source": [
+    "### POI diversity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f9ef9672-903a-4be0-b278-c692b3bd3fb6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "edges_poi_diversity_wmh3.to_crs(epsg=25832, inplace=True)\n",
+    "w = weights.contiguity.Queen.from_dataframe(edges_poi_diversity_wmh3, use_index=False)\n",
+    "if debug:\n",
+    "    plot_spatial_weights(w, edges_poi_diversity_wmh3)\n",
+    "lisa = esda.Moran_Local(edges_poi_diversity_wmh3[\"poi_diversity\"], w)\n",
+    "if debug:\n",
+    "    plot_local_autocorrelation(lisa, edges_poi_diversity_wmh3, \"poi_diversity\")\n",
+    "lisa_cluster(lisa, edges_poi_diversity_wmh3, p=0.05)\n",
+    "edges_poi_diversity_wmh3.to_crs(epsg=4326, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "1a60dd82-1770-4edc-910f-3d98e47385e1",
    "metadata": {},
    "source": [
-    "### Loop census"
+    "## Loop census"
    ]
   },
   {
@@ -403,7 +514,7 @@
    "id": "60b10bcb-f070-490e-bfe2-9fd34b713cb1",
    "metadata": {},
    "source": [
-    "#### Restrict to scenario lengths"
+    "### Restrict to scenario lengths"
    ]
   },
   {
@@ -463,7 +574,7 @@
    "id": "888b1702-daa1-424c-94f0-681423ebe418",
    "metadata": {},
    "source": [
-    "#### Restrict to scenario gradients"
+    "### Restrict to scenario gradients"
    ]
   },
   {
@@ -506,7 +617,7 @@
    "id": "7d22de8c-385c-4ae0-a16f-adb7db7bfc62",
    "metadata": {},
    "source": [
-    "#### Restrict to water limits"
+    "### Restrict to water limits"
    ]
   },
   {
@@ -549,7 +660,7 @@
    "id": "2142bee4-92ac-4ed1-9bfa-44cd61e05231",
    "metadata": {},
    "source": [
-    "#### Restrict with POI diversity"
+    "### Restrict with POI diversity"
    ]
   },
   {
@@ -927,7 +1038,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
