Add new scenario 2
Bugfix in 03

--- a/code/03_scenario_analysis.ipynb
+++ b/code/03_scenario_analysis.ipynb
@@ -15,14 +15,15 @@
    "metadata": {},
    "source": [
     "This notebook analyses loops created in notebook 01 with different scenarios for the whole country of Denmark.  \n",
-    "Explore two scenarios:  \n",
+    "Explore three scenarios:  \n",
     "1. Family with small children: 5-20km, max slope 4%\n",
     "1. Teenage/adult leisure cyclist: 10-40km, max slope 6%\n",
+    "1. Family with e-bikes: 10-40km, max slope 100%\n",
     "\n",
     "Contact: Michael Szell (michael.szell@gmail.com)\n",
     "\n",
     "Created: 2024-10-25  \n",
-    "Last modified: 2025-08-04"
+    "Last modified: 2025-08-05"
    ]
   },
   {
@@ -279,7 +280,7 @@
    "outputs": [],
    "source": [
     "# Plot all bounded sloped loops\n",
-    "vertex_sizes, vertex_colors = get_vertex_plotinfo(allloops_bound_sloped)\n",
+    "vertex_sizes, vertex_colors = get_vertex_plotinfo(allloops_dict[SCENARIOID][1])\n",
     "link_widths, link_colors = get_link_plotinfo(\n",
     "    edges,\n",
     "    var_bad=\"max_slope\",\n",
@@ -457,7 +458,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
