Add scenario 2 to 05
Discontinue combined study area code

--- a/code/05_hexgrid_correlations.ipynb
+++ b/code/05_hexgrid_correlations.ipynb
@@ -19,7 +19,7 @@
     "Contact: Michael Szell (michael.szell@gmail.com)\n",
     "\n",
     "Created: 2025-08-01  \n",
-    "Last modified: 2025-08-04  "
+    "Last modified: 2025-08-05"
    ]
   },
   {
@@ -37,7 +37,7 @@
    "source": [
     "- [X] Is node density a proxy for loop census size?\n",
     "- [X] LISA. Identify node density and water deserts.\n",
-    "- [ ] Add scenario Family with e-bikes = Adult but without gradient restriction\n",
+    "- [X] Add scenario Family with e-bikes = Adult but without gradient restriction\n",
     "- [ ] Add systematically water to water deserts and measure loop increase (for family e-bike scenario only?). Identify \"low hanging fruits\", \"biggest bang for the buck\"."
    ]
   },
@@ -935,7 +935,7 @@
    "id": "5d986894-2387-427c-a21d-4047525eb964",
    "metadata": {},
    "source": [
-    "Run this notebook on both scenarios to fully populate `dfunified_scenarios`."
+    "Run this notebook on all three scenarios to fully populate `dfunified_scenarios`."
    ]
   },
   {
@@ -946,9 +946,11 @@
    "outputs": [],
    "source": [
     "try:\n",
+    "    dfunified_scenarios[0]\n",
     "    dfunified_scenarios[1]\n",
+    "    dfunified_scenarios[2]\n",
     "\n",
-    "    fig, axrows = plt.subplots(nrows=3, ncols=4, figsize=(14, 9))\n",
+    "    fig, axrows = plt.subplots(nrows=4, ncols=4, figsize=(9, 7))\n",
     "\n",
     "    rownum = 0\n",
     "    axes = axrows[rownum]\n",
@@ -981,7 +983,7 @@
     "        axes[i].set_xlabel(xlabels[i])\n",
     "        axes[i].set_ylim([0, 23])\n",
     "\n",
-    "    for rownum in [1, 2]:\n",
+    "    for rownum in [1, 2, 3]:\n",
     "        axes = axrows[rownum]\n",
     "        sid = rownum - 1\n",
     "\n",
@@ -991,7 +993,7 @@
     "            dfunified_scenarios[sid][\"Loop bits (water)\"],\n",
     "            dfunified_scenarios[sid][\"Loop bits (POI)\"],\n",
     "        ]\n",
-    "        xlabels = [\"length\", \"gradient\", \"water\", \"POI diversity\"]\n",
+    "        xlabels = [\"Length\", \"Gradient\", \"Water\", \"POI diversity\"]\n",
     "\n",
     "        for i in range(len(xs)):\n",
     "            axes[i].scatter(xs[i], nodesh3[\"count\"], color=\"k\", alpha=0.1)\n",
@@ -1004,21 +1006,23 @@
     "                color=\"b\",\n",
     "            )\n",
     "\n",
-    "            if rownum == 2:\n",
+    "            if rownum == 3:\n",
     "                axes[i].set_xlabel(\n",
-    "                    \"Loop bits+1 (\" + xlabels[i] + \" restriction)\"\n",
+    "                    \"Loop bits+1\\n\" + xlabels[i] + \" restriction\"\n",
     "                )  # +1 because of +1 in get_vertex_loopnums\n",
     "            if i == 0:\n",
     "                axes[i].set_ylabel(SCENARIO[sid][\"name\"] + \"\\n\\n Node density\")\n",
     "            else:\n",
     "                axes[i].set_yticklabels([])\n",
+    "            if rownum == 1 or rownum == 2:\n",
+    "                axes[i].set_xticklabels([])\n",
     "\n",
     "            # confband(xs[i], nodesh3[\"count\"], axes[i]) # The confband doesn't add much value\n",
     "            axes[i].set_ylim([0, 23])\n",
     "            axes[i].set_xlim([-1, 18])\n",
     "\n",
     "except KeyError:\n",
-    "    print(\"Plesase re-run this notebook with scenarioid: 1\")"
+    "    print(\"Plesase re-run this notebook for all scenarioids 0, 1 and 2\")"
    ]
   }
  ],
