Improve plotting with style sheet

--- a/code/05_hexgrid_correlations.ipynb
+++ b/code/05_hexgrid_correlations.ipynb
@@ -58,7 +58,8 @@
    "source": [
     "%run -i setup_parameters.py\n",
     "load_data = True  # Set to False if data are huge and have already been loaded\n",
-    "debug = False  # Set to True for extra plots and verbosity"
+    "debug = False  # Set to True for extra plots and verbosity\n",
+    "plt.style.use(PATH[\"parameters\"] + \"plotstyle.mplstyle\")"
    ]
   },
   {
@@ -946,11 +947,18 @@
    "outputs": [],
    "source": [
     "try:\n",
+    "    plt.style.use(PATH[\"parameters\"] + \"plotstyle.mplstyle\")\n",
     "    dfunified_scenarios[0]\n",
     "    dfunified_scenarios[1]\n",
     "    dfunified_scenarios[2]\n",
     "\n",
-    "    fig, axrows = plt.subplots(nrows=4, ncols=4, figsize=(9, 7))\n",
+    "    fig, axrows = plt.subplots(\n",
+    "        nrows=4,\n",
+    "        ncols=4,\n",
+    "        figsize=(640 / PLOTPARAM[\"dpi\"], 480 / PLOTPARAM[\"dpi\"]),\n",
+    "        dpi=PLOTPARAM[\"dpi\"],\n",
+    "        squeeze=True,\n",
+    "    )\n",
     "\n",
     "    rownum = 0\n",
     "    axes = axrows[rownum]\n",
@@ -961,7 +969,11 @@
     "\n",
     "    for i in range(len(xlabels)):\n",
     "        axes[i].scatter(\n",
-    "            dfunified_properties_weighted[xlabels[i]].to_list(), y, color=\"k\", alpha=0.1\n",
+    "            dfunified_properties_weighted[xlabels[i]].to_list(),\n",
+    "            y,\n",
+    "            color=\"k\",\n",
+    "            alpha=0.1,\n",
+    "            linewidth=0,\n",
     "        )\n",
     "\n",
     "        if i != 0:\n",
@@ -972,9 +984,27 @@
     "            axes[i].plot(\n",
     "                dfunified_properties_weighted[xlabels[i]],\n",
     "                res.slope * dfunified_properties_weighted[xlabels[i]] + res.intercept,\n",
-    "                linewidth=2.5,\n",
+    "                linewidth=1.5,\n",
     "                color=\"b\",\n",
     "            )\n",
+    "            if res.pvalue > 0.001:\n",
+    "                axes[i].text(\n",
+    "                    0.96,\n",
+    "                    0.95,\n",
+    "                    f\"r = {res.rvalue:.2f}\\np = {res.pvalue:.2f}\",\n",
+    "                    horizontalalignment=\"right\",\n",
+    "                    verticalalignment=\"top\",\n",
+    "                    transform=axes[i].transAxes,\n",
+    "                )\n",
+    "            else:\n",
+    "                axes[i].text(\n",
+    "                    0.96,\n",
+    "                    0.95,\n",
+    "                    f\"r = {res.rvalue:.2f}\",\n",
+    "                    horizontalalignment=\"right\",\n",
+    "                    verticalalignment=\"top\",\n",
+    "                    transform=axes[i].transAxes,\n",
+    "                )\n",
     "\n",
     "        if i == 0:\n",
     "            axes[i].set_ylabel(\"Node density\")\n",
@@ -982,6 +1012,11 @@
     "            axes[i].set_yticklabels([])\n",
     "        axes[i].set_xlabel(xlabels[i])\n",
     "        axes[i].set_ylim([0, 23])\n",
+    "        axes[i].set_yticks([0, 5, 10, 15, 20])\n",
+    "        if i == 1:  # max gradient has some outliers\n",
+    "            axes[i].set_xlim([0, 20])\n",
+    "        if i == 2:  # nicer xticks for water\n",
+    "            axes[i].set_xticks([0, 0.25, 0.5, 0.75, 1])\n",
     "\n",
     "    for rownum in [1, 2, 3]:\n",
     "        axes = axrows[rownum]\n",
@@ -996,13 +1031,13 @@
     "        xlabels = [\"Length\", \"Gradient\", \"Water\", \"POI diversity\"]\n",
     "\n",
     "        for i in range(len(xs)):\n",
-    "            axes[i].scatter(xs[i], nodesh3[\"count\"], color=\"k\", alpha=0.1)\n",
+    "            axes[i].scatter(xs[i], nodesh3[\"count\"], color=\"k\", alpha=0.1, linewidth=0)\n",
     "\n",
     "            res = scipy.stats.linregress(xs[i], nodesh3[\"count\"])\n",
     "            axes[i].plot(\n",
     "                xs[i],\n",
     "                res.slope * xs[i] + res.intercept,\n",
-    "                linewidth=2.5,\n",
+    "                linewidth=1.5,\n",
     "                color=\"b\",\n",
     "            )\n",
     "\n",
@@ -1011,18 +1046,60 @@
     "                    \"Loop bits+1\\n\" + xlabels[i] + \" restriction\"\n",
     "                )  # +1 because of +1 in get_vertex_loopnums\n",
     "            if i == 0:\n",
-    "                axes[i].set_ylabel(SCENARIO[sid][\"name\"] + \"\\n\\n Node density\")\n",
+    "                axes[i].set_ylabel(SCENARIO[sid][\"name_short\"] + \"\\n\\n Node density\")\n",
     "            else:\n",
     "                axes[i].set_yticklabels([])\n",
     "            if rownum == 1 or rownum == 2:\n",
     "                axes[i].set_xticklabels([])\n",
+    "            axes[i].set_xticks([0, 4, 8, 12, 16])\n",
     "\n",
     "            # confband(xs[i], nodesh3[\"count\"], axes[i]) # The confband doesn't add much value\n",
     "            axes[i].set_ylim([0, 23])\n",
     "            axes[i].set_xlim([-1, 18])\n",
+    "            axes[i].set_yticks([0, 5, 10, 15, 20])\n",
+    "            if res.pvalue > 0.001:\n",
+    "                axes[i].text(\n",
+    "                    0.96,\n",
+    "                    0.95,\n",
+    "                    f\"r = {res.rvalue:.2f}\\np = {res.pvalue:.2f}\",\n",
+    "                    horizontalalignment=\"right\",\n",
+    "                    verticalalignment=\"top\",\n",
+    "                    transform=axes[i].transAxes,\n",
+    "                )\n",
+    "            else:\n",
+    "                axes[i].text(\n",
+    "                    0.96,\n",
+    "                    0.95,\n",
+    "                    f\"r = {res.rvalue:.2f}\",\n",
+    "                    horizontalalignment=\"right\",\n",
+    "                    verticalalignment=\"top\",\n",
+    "                    transform=axes[i].transAxes,\n",
+    "                )\n",
+    "\n",
+    "    plt.subplots_adjust(\n",
+    "        top=0.93, bottom=0.17, left=0.12, right=0.97, wspace=0.16, hspace=0.22\n",
+    "    )\n",
+    "\n",
+    "    # Shift top row upwards\n",
+    "    axes = axrows[0]\n",
+    "    for i in range(len(xlabels)):\n",
+    "        l, b, w, h = axes[i].get_position().bounds\n",
+    "        axes[i].set_position([l, b + 0.25 * h, w, h])\n",
+    "        axes[i].get_position()\n",
+    "    # Shift bottom 3 rows downwards\n",
+    "    for rownum in [1, 2, 3]:\n",
+    "        axes = axrows[rownum]\n",
+    "        for i in range(len(xlabels)):\n",
+    "            l, b, w, h = axes[i].get_position().bounds\n",
+    "            axes[i].set_position([l, b - 0.25 * h, w, h])\n",
+    "            axes[i].get_position()\n",
+    "\n",
+    "    fig.savefig(\n",
+    "        PATH[\"plot\"] + \"nodedensityscatter.pdf\", facecolor=\"white\", edgecolor=\"none\"\n",
+    "    )\n",
     "\n",
     "except KeyError:\n",
-    "    print(\"Plesase re-run this notebook for all scenarioids 0, 1 and 2\")"
+    "    print(\"Please re-run this notebook for all scenarioids 0, 1 and 2\")"
    ]
   }
  ],
