Move snapping to its own notebook
- Update geopandas to 0.14.4 to get rid of fiona bug "AttributeError: module 'fiona' has no attribute 'path'"
- Restore combined study area code, as needed for 00
- Improve notebook docs

--- a/code/02_loop_generation.ipynb
+++ b/code/02_loop_generation.ipynb
@@ -5,7 +5,7 @@
    "id": "2e582dfd",
    "metadata": {},
    "source": [
-    "# 01. Create loop census, Denmark-wide\n",
+    "# 02. Generate loop censuses, Denmark-wide\n",
     "## Project: Bicycle node network loop analysis"
    ]
   },
@@ -14,12 +14,13 @@
    "id": "2bc9b960",
    "metadata": {},
    "source": [
-    "This notebook creates a loop census from the input data set and calculates/plots basic descriptive statistics for the whole country of Denmark.\n",
+    "This notebook generates a loop census for each node from the preprocessed and snapped Denmark-wide network from 01, and calculates/plots basic descriptive statistics for the whole country of Denmark.  \n",
+    "Please select `denmark` as the `study_area` in the `config.yml`.\n",
     "\n",
     "Contact: Michael Szell (michael.szell@gmail.com)\n",
     "\n",
     "Created: 2024-01-24  \n",
-    "Last modified: 2025-08-04"
+    "Last modified: 2025-08-07"
    ]
   },
   {
@@ -466,7 +467,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
