--- a/code/03_basic_statistics.ipynb
+++ b/code/03_basic_statistics.ipynb
@@ -5,7 +5,7 @@
    "id": "2e582dfd",
    "metadata": {},
    "source": [
-    "# 02. Basic statistics, Denmark-wide\n",
+    "# 03. Basic statistics, Denmark-wide\n",
     "## Project: Bicycle node network loop analysis"
    ]
   },
@@ -14,12 +14,13 @@
    "id": "2bc9b960",
    "metadata": {},
    "source": [
-    "This notebook explores basic statistics of network and loops created in notebook 01 for the whole country of Denmark, without exploring different scenarios.\n",
+    "This notebook explores basic statistics of network and loops created in notebook 02 for the whole country of Denmark, without exploring different scenarios.  \n",
+    "Please select `denmark` as the `study_area` in the `config.yml`.\n",
     "\n",
     "Contact: Michael Szell (michael.szell@gmail.com)\n",
     "\n",
     "Created: 2024-01-29  \n",
-    "Last modified: 2025-08-04"
+    "Last modified: 2025-08-07"
    ]
   },
   {
@@ -1515,14 +1516,6 @@
     "axes.set_xlabel(\"Link length\")\n",
     "axes.set_ylabel(\"Maximum gradient\");"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4853960e-d030-494d-a097-f08111b96068",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -1541,7 +1534,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
