--- a/code/04_scenario_analysis.ipynb
+++ b/code/04_scenario_analysis.ipynb
@@ -5,7 +5,7 @@
    "id": "2e582dfd",
    "metadata": {},
    "source": [
-    "# 03. Scenario analysis, Denmark-wide\n",
+    "# 04. Scenario analysis, Denmark-wide\n",
     "## Project: Bicycle node network loop analysis"
    ]
   },
@@ -14,7 +14,9 @@
    "id": "2bc9b960",
    "metadata": {},
    "source": [
-    "This notebook analyses loops created in notebook 01 with different scenarios for the whole country of Denmark.  \n",
+    "This notebook analyses loops created in notebook 02 with different scenarios for the whole country of Denmark.    \n",
+    "Please select `denmark` as the `study_area` in the `config.yml`.  \n",
+    "\n",
     "Explore three scenarios:  \n",
     "1. Family with small children: 5-20km, max slope 4%\n",
     "1. Teenage/adult leisure cyclist: 10-40km, max slope 6%\n",
@@ -23,7 +25,7 @@
     "Contact: Michael Szell (michael.szell@gmail.com)\n",
     "\n",
     "Created: 2024-10-25  \n",
-    "Last modified: 2025-08-05"
+    "Last modified: 2025-08-07"
    ]
   },
   {
