--- a/code/05_hexgrid_correlations.ipynb
+++ b/code/05_hexgrid_correlations.ipynb
@@ -14,12 +14,13 @@
    "id": "2bc9b960",
    "metadata": {},
    "source": [
-    "This notebook puts data into an H3 grid and performs local spatial autocorrelation and pairwise correlations.\n",
+    "This notebook puts loop census and scenario data from 02 and 04 into an H3 grid and performs local spatial autocorrelation and pairwise correlations.  \n",
+    "Please select `denmark` as the `study_area` in the `config.yml`.\n",
     "\n",
     "Contact: Michael Szell (michael.szell@gmail.com)\n",
     "\n",
     "Created: 2025-08-01  \n",
-    "Last modified: 2025-08-05"
+    "Last modified: 2025-08-07"
    ]
   },
   {
